manifest-files/deployment-no-toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  hethvik-deployment
  labels:
    name: hethvik
    app: hethvik-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      name: hethvik
  template:
    metadata:
      labels:
        name: hethvik
    spec:
      containers:
      - image:  nginx
        name:  hethvik-container
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "30m"
            memory: "100M"
        ports:
        - containerPort:  5000
          name:  hethvik-port
